update GC